# sma

./: CMakeLists.txt  R.hpp  README.md  ar.hpp  diff1.hpp  loss.hpp  matrix.hpp  mf.hpp  program.cpp  program.h  solver.hpp  term.hpp  variable.hpp
sma/: DESCRIPTION  NAMESPACE
sma/R/: sma.R
sma/src/: Makevars  ar.hpp  arws.hpp  diff1.hpp  fnorm.hpp  mf.hpp  program.h  solver.hpp  term.hpp  trainc.cpp  variable.hpp
